Fix research page spacing and items

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -318,6 +318,12 @@ h3 /* .post-subtitle */ {
         margin-bottom: 0;
     }
 }
+
+.research-intro {
+    > p:first-child {
+        margin-bottom: 1.35rem;
+    }
+}
 	
 html {
   overflow-y: scroll;
